using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AiAttack : MonoBehaviour
{
    private string currentState = "Idle";

    public void SetState(string newState)
    {
        currentState = newState;
    }

    public void Update()
    {
        switch (currentState)
        {
            case "Idle":
                // Perform actions for the "Idle" state
                // Example: AI scans the environment for targets
                SetState("Searching");
                break;

            case "Searching":
                // Perform actions for the "Searching" state
                // Example: AI looks for potential enemies
                if (EnemyDetected())
                {
                    SetState("Engaging");
                }
                break;

            case "Engaging":
                // Perform actions for the "Engaging" state
                // Example: Decide how to engage the enemy (launch, AoE, lob, melee, slam, shot)
                if (ShouldLaunch())
                {
                    SetState("Launching");
                }
                else if (ShouldAoE())
                {
                    SetState("AoEAttack");
                }
                else if (ShouldLob())
                {
                    SetState("Lobbing");
                }
                else if (ShouldMelee())
                {
                    SetState("MeleeAttacking");
                }
                else if (ShouldSlam())
                {
                    SetState("Slamming");
                }
                else if (ShouldShot())
                {
                    SetState("Shooting");
                }
                break;

            case "Launching":
                // Perform actions for the "Launching" state
                // Example: AI launches a projectile
                // Transition to a new state when the action is complete
                SetState("Idle");
                break;

            // Implement similar blocks for other states (e.g., AoEAttack, Lobbing, MeleeAttacking, Slamming, Shooting)
        }
    }

    // Mock functions for conditions
    private bool EnemyDetected()
    {
        // Implement logic to detect enemies
        return true; // Replace with your condition
    }

    private bool ShouldLaunch()
    {
        // Implement logic for deciding whether to launch
        return true; // Replace with your condition
    }

    private bool ShouldAoE()
    {
        // Implement logic for deciding whether to use AoE attack
        return false; // Replace with your condition
    }

    private bool ShouldLob()
    {
        // Implement logic for deciding whether to lob
        return false; // Replace with your condition
    }

    private bool ShouldMelee()
    {
        // Implement logic for deciding whether to melee attack
        return false; // Replace with your condition
    }

    private bool ShouldSlam()
    {
        // Implement logic for deciding whether to slam
        return false; // Replace with your condition
    }

    private bool ShouldShot()
    {
        // Implement logic for deciding whether to shoot
        return false; // Replace with your condition
    }
}